# exiv2_win

./: .gitmodules  README.md
build-exiv2/: build.bat
libiconv/: CMakeLists.txt
libiconv/include/: iconv.h
libiconv/src/: iconv.c  localcharset.h
